[gd_scene load_steps=3 format=3 uid="uid://cmdevmenu123"]

[ext_resource type="Script" path="res://scripts/ui/dev_menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.4, 0.1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DevMenu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -220.0
offset_right = 260.0
offset_bottom = -10.0
grow_vertical = 0
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "DEV MENU (F12)"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ItemIDContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/ItemIDContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item ID:"

[node name="ItemIDInput" type="SpinBox" parent="Panel/VBox/ItemIDContainer"]
layout_mode = 2
min_value = 1.0
max_value = 9999.0
value = 1.0

[node name="QuantityContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/QuantityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quantity:"

[node name="QuantityInput" type="SpinBox" parent="Panel/VBox/QuantityContainer"]
layout_mode = 2
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="AddButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Add Item"

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
